rendre les reponses plus adéquates
